<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Show on Map</string>
    <string name="title_activity_detail">Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pref_location_key">location</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_default_location">Rio de Janeiro</string>

    <string name="pref_units_key">units</string>
    <string name="pref_title_units">Pick your Units</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_default_units">@string/pref_units_metric</string>
    <string-array name="pref_unit_list_titles">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_unit_list_values">
        <item>@string/pref_units_metric</item>
        <item>@string/pref_units_imperial</item>
    </string-array>

</resources>
